# FreeSynergy.Node

./: .ansible-lint  .gitignore  .yamllint.yml  CHANGELOG.md  CLAUDE.md  FREESYNERGY-PLAN-v5-FINAL.md  FSN-I18N-SNIPPET-PLAN.md  FSN-UI-CLEANUP-LIFECYCLE-PLAN.md  LICENSE  README.md  RELEASES.md  RULES.md  TODO.md  VISION.md  contributors.md  deny.toml  fsn-install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml
cli/: Cargo.toml
cli/crates/fsn-cli/: Cargo.toml
cli/crates/fsn-cli/src/: cli.rs
cli/crates/fsn-cli/src/commands/: clean.rs  config.rs  deploy.rs  init.rs  mod.rs  remove.rs  restart.rs  server_setup.rs  status.rs  store.rs  sync.rs  undeploy.rs  update.rs
cli/crates/fsn-cli/tests/: init_wizard.rs
cli/crates/fsn-core/: Cargo.toml
cli/crates/fsn-core/src/: error.rs  health.rs  lib.rs  store.rs
cli/crates/fsn-core/src/config/: bot.rs  host.rs  mod.rs  project.rs  settings.rs  validate.rs
cli/crates/fsn-core/src/config/service/: types.rs
cli/crates/fsn-deploy/: Cargo.toml
cli/crates/fsn-deploy/src/: constraints.rs  deploy.rs  diff.rs  health.rs  lib.rs  module_runner.rs  observe.rs  remote.rs  resolve.rs  setup.rs  store.rs  swap.rs  template.rs
cli/crates/fsn-deploy/src/generate/: compose.rs  env.rs  kdl.rs  quadlet.rs
cli/crates/fsn-deploy/src/hooks/: kanidm.rs  lifecycle.rs  mod.rs
cli/crates/fsn-deploy/tests/: deploy_lifecycle.rs
cli/crates/fsn-dns/: Cargo.toml
cli/crates/fsn-dns/src/: hetzner.rs  provider.rs
cli/crates/fsn-engine/: Cargo.toml
cli/crates/fsn-engine/src/: constraints.rs  deploy.rs  health.rs  lib.rs  resolve.rs  store.rs  template.rs
cli/crates/fsn-engine/src/generate/: compose.rs  quadlet.rs
cli/crates/fsn-engine/src/hooks/: common.rs  cryptpad.rs  forgejo.rs  kanidm.rs  mod.rs  stalwart.rs  tuwunel.rs  vikunja.rs
cli/crates/fsn-form-derive/src/: lib.rs
cli/crates/fsn-form/src/: lib.rs
cli/crates/fsn-host/: Cargo.toml
cli/crates/fsn-host/src/: session.rs
cli/crates/fsn-installer/: Cargo.toml
cli/crates/fsn-installer/src/: main.rs
cli/crates/fsn-node-cli/: Cargo.toml
cli/crates/fsn-node-cli/locales/de/: cli.toml
cli/crates/fsn-node-cli/locales/en/: cli.toml
cli/crates/fsn-node-cli/src/: db.rs  main.rs
cli/crates/fsn-node-cli/src/commands/: conductor.rs  config.rs  deploy.rs  init.rs  logs.rs  mod.rs  restart.rs  serve.rs  store.rs  sync.rs  tui.rs  update.rs
cli/crates/fsn-node-core/: Cargo.toml
cli/crates/fsn-node-core/examples/: schema-gen.rs
cli/crates/fsn-node-core/fuzz/: Cargo.toml
cli/crates/fsn-node-core/fuzz/fuzz_targets/: fuzz_service_class.rs
cli/crates/fsn-node-core/src/: audit.rs  error.rs  health.rs  lib.rs  resource.rs
cli/crates/fsn-node-core/src/config/: bot.rs  discovery.rs  host.rs  manifest.rs  meta.rs  mod.rs  plugin.rs  project.rs  registry.rs  settings.rs  validate.rs  vault.rs
cli/crates/fsn-node-core/src/config/service/: mod.rs  types.rs
cli/crates/fsn-node-core/src/state/: actual.rs  desired.rs  diff.rs  mod.rs
cli/crates/fsn-node-core/tests/: schema.rs  store_modules.rs
cli/crates/fsn-podman/src/: podman.rs
cli/crates/fsn-tui/: Cargo.toml
cli/crates/fsn-tui/src/: actions.rs  app.rs  bot_form.rs  click_map.rs  deploy_thread.rs  events.rs  events_dashboard.rs  handles.rs  host_form.rs  i18n.rs  lib.rs  mouse.rs  project_form.rs  resource_form.rs  schema_form.rs  service_form.rs  settings_form.rs  submit.rs  sysinfo.rs  task_queue.rs
cli/crates/fsn-tui/src/app/: event_loop.rs  mod.rs  overlay.rs  screen.rs
cli/crates/fsn-tui/src/events_dashboard/: actions.rs  mod.rs  sidebar.rs
cli/crates/fsn-tui/src/ui/: cursor.rs  dashboard.rs  detail.rs  form_node.rs  help_sidebar.rs  mod.rs  new_project.rs  settings_screen.rs  store_screen.rs  task_wizard.rs  welcome.rs  widgets.rs
cli/crates/fsn-tui/src/ui/nodes/: env_table.rs  mod.rs  multi_select_input.rs  section_node.rs  select_input.rs  service_slot.rs  text_area.rs  text_input.rs
cli/crates/fsn-tui/src/ui/overlays/: welcome.rs
cli/crates/fsn-web/src/: api.rs
cli/fuzz/: Cargo.toml
docs/: ARCHITECTURE.md
hosts/: .gitignore  example.host.yml
locales/: de.po  en.pot
migration/: README.md
migration/v1_to_v2/: Cargo.toml
migration/v1_to_v2/src/: main.rs
modules/auth/kanidm/: kanidm.yml
modules/auth/kanidm/playbooks/: deploy-setup.yml
modules/auth/kanidm/templates/: kanidm.toml.j2
modules/cache/dragonfly/: dragonfly.yml
modules/chat/tuwunel/: tuwunel.yml
modules/chat/tuwunel/playbooks/: deploy-setup.yml
modules/chat/tuwunel/templates/: tuwunel.toml.j2
modules/collab/cryptpad/: cryptpad.yml
modules/collab/cryptpad/playbooks/: deploy-setup.yml
modules/collab/cryptpad/templates/: sso.js.j2  (+1 more)
modules/database/postgres/: postgres.yml
modules/git/forgejo/: forgejo.yml
modules/mail/stalwart/: stalwart.yml
modules/maps/umap/: umap.yml
modules/observability/openobserver/: openobserver.yml
modules/observability/otel-collector/: otel-collector.yml
modules/proxy/zentinel/: zentinel.yml
modules/tasks/vikunja/: vikunja.yml
modules/tickets/pretix/: Dockerfile  pretix.yml
modules/wiki/outline/: outline.yml
playbooks/: clean-stack.yml  deploy-stack.yml  fetch-modules.yml  install-project.yml  remove-stack.yml  restart-stack.yml  setup-server.yml  sync-stack.yml  undeploy-stack.yml  update-stack.yml
playbooks/tasks/: check-constraints.yml  clean-module.yml  deploy-module.yml  dns-cleanup-module.yml  dns-create-record.yml  dns-remove-record.yml  generate-quadlet.yml  generate-single-example.yml  record-deployed-version.yml  remove-module.yml  restart-module.yml  run-module-hooks.yml  undeploy-module.yml  update-module.yml
playbooks/tasks/tasks/: deploy-module.yml  dns-cleanup-module.yml  generate-quadlet.yml  record-deployed-version.yml  run-module-hooks.yml
playbooks/templates/: container.env.j2  container.quadlet.j2  project.network.j2  vault.yml.j2
projects/FreeSynergy.Net/: .gitignore  freesynergy.federation.yml  freesynergy.project.yml
projects/FreeSynergy.Net/branding/: meta.yml  theme.css
store/: index.toml
tools/: generate-i18n.sh
(+25 files in other folders)
