[workspace]
members = [
    "crates/fsn-form-derive",
    "crates/fsn-form",
    "crates/fsn-core",
    "crates/fsn-engine",
    "crates/fsn-podman",
    "crates/fsn-dns",
    "crates/fsn-cli",
    "crates/fsn-web",
    "crates/fsn-tui",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergyNet/FreeSynergy.Node"

# ── Shared dependency versions ────────────────────────────────────────────────
[workspace.dependencies]
# External crates (outside this workspace)
store-sdk   = { path = "../../Store/crates/store-sdk" }

# Internal crates
fsn-form-derive = { path = "crates/fsn-form-derive" }
fsn-form    = { path = "crates/fsn-form" }
fsn-core    = { path = "crates/fsn-core" }
fsn-engine  = { path = "crates/fsn-engine" }
fsn-podman  = { path = "crates/fsn-podman" }
fsn-dns     = { path = "crates/fsn-dns" }
fsn-web     = { path = "crates/fsn-web" }
fsn-tui     = { path = "crates/fsn-tui" }

# TUI
ratatui    = { version = "0.30" }
crossterm  = { version = "0.29" }
sysinfo    = { version = "0.33" }

# Serialization
serde          = { version = "1",    features = ["derive"] }
toml           = { version = "0.8",  features = ["preserve_order"] }
serde_json     = { version = "1" }
indexmap       = { version = "2",    features = ["serde"] }

# Async runtime
tokio          = { version = "1",    features = ["full"] }

# Error handling
anyhow         = { version = "1" }
thiserror      = { version = "2" }

# Templating (Jinja2-compatible; same .j2 templates work)
minijinja      = { version = "2",    features = ["loader"] }

# CLI
clap           = { version = "4",    features = ["derive", "color", "env"] }

# HTTP client (DNS APIs)
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebUI
axum           = { version = "0.8" }
tower-http     = { version = "0.6",  features = ["fs", "cors", "trace"] }

# Logging / tracing
tracing        = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Secrets (zero-on-drop, never Debug)
secrecy        = { version = "0.10", features = ["serde"] }

# Encryption at rest (vault.age)
age            = { version = "0.10", features = ["armor"] }

# TUI framework — rat-salsa ecosystem (event loop + mouse + focus + widgets)
rat-salsa      = { version = "4.0" }
rat-widget     = { version = "3.2" }
rat-menu       = { version = "3.1" }
rat-theme4     = { version = "4.5" }

# TUI enhancements
tui-big-text   = { version = "0.8" }

# Misc
walkdir        = { version = "2" }
async-trait    = { version = "0.1" }
libc           = { version = "0.2" }
arboard        = { version = "3", default-features = false, features = ["wayland-data-control"] }
