[workspace]
members = [
    "crates/fsn-node-core",
    "crates/fsn-deploy",
    "crates/fsn-dns",
    "crates/fsn-host",
    "crates/fsn-wizard",
    "crates/fsn-node-cli",
    "crates/fsn-installer",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/Node"

# ── Shared dependency versions ────────────────────────────────────────────────
[workspace.dependencies]
# FreeSynergy.Lib — shared libraries
fsn-types          = { path = "../../FreeSynergy.Lib/fsn-types" }
fsn-error          = { path = "../../FreeSynergy.Lib/fsn-error" }
fsn-config         = { path = "../../FreeSynergy.Lib/fsn-config" }
fsn-i18n           = { path = "../../FreeSynergy.Lib/fsn-i18n" }
fsn-theme          = { path = "../../FreeSynergy.Lib/fsn-theme" }
fsn-help           = { path = "../../FreeSynergy.Lib/fsn-help" }
fsn-health         = { path = "../../FreeSynergy.Lib/fsn-health" }
fsn-plugin-sdk     = { path = "../../FreeSynergy.Lib/fsn-plugin-sdk" }
fsn-plugin-runtime = { path = "../../FreeSynergy.Lib/fsn-plugin-runtime", features = ["wasm"] }
fsn-container      = { path = "../../FreeSynergy.Lib/fsn-container" }
fsn-template       = { path = "../../FreeSynergy.Lib/fsn-template" }
fsn-db             = { path = "../../FreeSynergy.Lib/fsn-db", features = ["sqlite"] }
fsn-store          = { path = "../../FreeSynergy.Lib/fsn-store" }

# Internal crates
fsn-node-core = { path = "crates/fsn-node-core" }
fsn-deploy  = { path = "crates/fsn-deploy" }
fsn-dns     = { path = "crates/fsn-dns" }
fsn-host    = { path = "crates/fsn-host" }
fsn-wizard  = { path = "crates/fsn-wizard" }

# Serialization
serde          = { version = "1",    features = ["derive"] }
toml           = { version = "0.8",  features = ["preserve_order"] }
serde_json     = { version = "1" }
indexmap       = { version = "2",    features = ["serde"] }

# Async runtime
tokio          = { version = "1",    features = ["full"] }

# Error handling
anyhow         = { version = "1" }
thiserror      = { version = "2" }

# CLI
clap           = { version = "4",    features = ["derive", "color", "env"] }

# HTTP client (DNS APIs, store)
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging / tracing
tracing        = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Secrets (zero-on-drop, never Debug)
secrecy        = { version = "0.10", features = ["serde"] }

# Encryption at rest (vault.age)
age            = { version = "0.10", features = ["armor"] }

# YAML parsing (wizard)
serde_yaml     = { version = "0.9" }

# Misc
walkdir        = { version = "2" }
async-trait    = { version = "0.1" }
libc           = { version = "0.2" }

# Random (crypto-safe RNG)
rand           = { version = "0.8" }

# SSH (remote deploy)
russh          = { version = "0.45" }
russh-keys     = { version = "0.45" }

# WebSocket (Desktop Live-Updates, fsn serve)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# gRPC (Inter-Process Communication)
tonic          = { version = "0.12" }
prost          = { version = "0.13" }

# JSON-Schema Generation aus Rust-Structs
schemars       = { version = "0.8", features = ["preserve_order", "indexmap2"] }

# Test infrastructure (declared here; individual crates use in [dev-dependencies])
rstest         = { version = "0.23" }
insta          = { version = "1",   features = ["toml"] }
testcontainers = { version = "0.23" }
tempfile       = { version = "3" }

