[package]
name    = "fsn-migrate-v1-to-v2"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "fsn-migrate"
path = "src/main.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
toml       = { version = "0.8", features = ["preserve_order"] }
walkdir    = { version = "2" }
