[package]
name        = "fsn-deploy"
description = "FreeSynergy.Node – deployment engine (Quadlet generation, Zentinel, reconciliation)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[features]
wasm = ["fsn-plugin-runtime/wasm"]

[dependencies]
fsn-store          = { workspace = true }
fsn-node-core           = { workspace = true }
fsn-plugin-runtime = { workspace = true }
fsn-plugin-sdk     = { workspace = true }
fsn-template       = { workspace = true }
fsn-container      = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
indexmap           = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
reqwest            = { workspace = true }
tracing            = { workspace = true }
fsn-host = { workspace = true }

[dev-dependencies]
rstest   = { workspace = true }
insta    = { workspace = true }
tempfile = { workspace = true }
tokio    = { workspace = true }

