[package]
name        = "fsn-dns"
description = "FreeSynergy.Node – DNS management (Hetzner, Cloudflare)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
fsn-node-core = { workspace = true }
tokio    = { workspace = true }
reqwest  = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
