[package]
name        = "fsn-host"
description = "FreeSynergy.Node – host management (SSH, remote install, provisioning)"
version.workspace   = true
edition.workspace   = true
license.workspace   = true

[dependencies]
fsn-node-core   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
async-trait = { workspace = true }
russh      = { workspace = true }
russh-keys = { workspace = true }
