[package]
name        = "fsn-installer"
description = "FreeSynergy.Node – bootstrap installer (replaces fsn-install.sh)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[[bin]]
name = "fsn-installer"
path = "src/main.rs"

[dependencies]
clap    = { workspace = true }
anyhow  = { workspace = true }
tokio   = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
