[package]
name        = "fsn-node-cli"
description = "FreeSynergy.Node – command-line management tool"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[[bin]]
name = "fsn"
path = "src/main.rs"

[dependencies]
fsn-node-core      = { workspace = true }
fsn-db        = { workspace = true }
fsn-deploy    = { workspace = true }
fsn-dns       = { workspace = true }
fsn-host      = { workspace = true }
fsn-container = { workspace = true }
fsn-store     = { workspace = true }
fsn-i18n      = { workspace = true }
clap        = { workspace = true }
tokio       = { workspace = true }
anyhow      = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
libc        = { workspace = true }
rand           = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
