[package]
name        = "fsn-tui"
description = "FreeSynergy.Node – terminal UI dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fsn-form   = { workspace = true }
fsn-core   = { workspace = true }
fsn-engine = { workspace = true }
fsn-podman = { workspace = true }
ratatui       = { workspace = true }
crossterm     = { workspace = true }
rat-salsa     = { workspace = true }
rat-widget    = { workspace = true }
rat-menu      = { workspace = true }
rat-theme4    = { workspace = true }
tui-big-text  = { workspace = true }
sysinfo    = { workspace = true }
anyhow     = { workspace = true }
reqwest    = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
toml       = { workspace = true }
arboard    = { workspace = true }
