[package]
name    = "fsn-node-core-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fsn-node-core = { path = ".." }
toml          = { version = "0.8" }

[[bin]]
name = "fuzz_service_class"
path = "fuzz_targets/fuzz_service_class.rs"
doc  = false
